Fix: Bug with tech-news-wrap id

--- a/assets/css/scss/_home.scss
+++ b/assets/css/scss/_home.scss
@@ -195,7 +195,7 @@ body.home {
 
 /* Share Icons */
 
-.tech-news-wrap {
+#tech-news-wrap {
    padding: 10px 10px 0 10px;
    color: $text-color;
    background: #F0F5F8;
